--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,9 @@ body {
     margin-top: 120px;
     font-size: 72px;
     color: #dfd97d; }
-  body div {
+  body #controls {
     text-align: center; }
-    body div .btns {
+    body #controls .btns {
       height: 40px;
       width: 100px;
       font-size: 20px;
@@ -21,5 +21,8 @@ body {
       border-radius: 10px;
       box-shadow: 3px 2px 5px black;
       letter-spacing: 1px; }
+  body #drpdwnTitle {
+    background-color: #d6dceb;
+    width: 180px; }
 
 /*# sourceMappingURL=main.css.map */
