Unfinished timer for inspection

--- a/css/appearance.sass
+++ b/css/appearance.sass
@@ -23,7 +23,51 @@ body
             border-radius: 10px
             box-shadow: 3px 2px 5px black
             letter-spacing: 1px
+    
+    #timeinspection
+        margin-top: 50px
+        display: flex
+        justify-content: center
 
-    #drpdwnTitle
-        background-color: #d6dceb
-        width: 180px
+        #drpdwnTitle
+            text-transform: uppercase
+            color: #e2e5c9
+            background-color: #52426b
+            padding: 10px
+
+            &:hover
+                cursor: pointer
+
+        #content
+            background-color: #7889c3
+            box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2)
+            margin-top: 70px
+
+            .contentBtns
+                border-style: none
+                padding: 10px
+                margin: 5px
+
+                &:hover
+                    cursor: pointer
+                    background-color: #a1add8
+
+    #countdown
+        margin-left: 20px
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
