--- a/css/appearance.sass
+++ b/css/appearance.sass
@@ -16,7 +16,8 @@ body
             height: 40px
             width: 100px
             font-size: 20px
-            margin: 10px 30px 30px 30px
+            margin: 30px
+            margin-top: 10px
             background-color: #d6dceb
             border-style: none
             border-radius: 10px
@@ -53,21 +54,6 @@ body
 
     #countdown
         margin-left: 20px
-
-    
-@media screen and (max-width: 480px)
-    body
-        margin: 5px
-        
-        #time
-            font-size: 60px
-
-        #controls
-
-            .btns
-                width: 80px
-                margin: 10px 20px 0 20px
-                font-size: 20px
 
 
 
