--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
 body {
   margin: 0;
   font-family: "Open Sans";
@@ -55,14 +54,4 @@ body {
       margin: 10px 10px 0 20px;
       font-size: 20px; } }
 
-#timeinspection {
-  position: relative;
-  display: inline-block; }
-  #timeinspection #content {
-    display: none;
-    position: absolute;
-    min-width: 160px;
-    padding: 12px 16px;
-    z-index: 1; }
-  #timeinspection:hover #content {
-    display: block; }
+/*# sourceMappingURL=main.css.map */
