--- a/css/appearance.sass
+++ b/css/appearance.sass
@@ -1,7 +1,7 @@
 body
     margin: 0
     font-family: "Open Sans"
-    background-color: #4f66b4
+    background-color: rgb(0, 255, 0)
 
     #time
         text-align: center
