--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   font-family: "Open Sans";
-  background-color: #4f66b4; }
+  background-color: lime; }
   body #time {
     text-align: center;
     margin-top: 120px;
