--- a/css/main.sass
+++ b/css/main.sass
@@ -1,3 +1,86 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans')
-@import "appearance"
-@import "dropdown"
+
+body
+    margin: 0
+    font-family: "Open Sans"
+    background-color: #000
+
+    #time
+        text-align: center
+        margin-top: 120px
+        font-size: 72px
+        color: #dfd97d
+    
+    #controls
+        text-align: center
+
+        .btns
+            height: 40px
+            width: 100px
+            font-size: 20px
+            margin: 30px
+            margin-top: 10px
+            background-color: #d6dceb
+            border-style: none
+            border-radius: 10px
+            box-shadow: 3px 2px 5px black
+            letter-spacing: 1px
+    
+    #timeinspection
+        margin-top: 50px
+        display: flex
+        justify-content: center
+
+        #drpdwnTitle
+            text-transform: uppercase
+            color: #e2e5c9
+            background-color: #52426b
+            padding: 10px
+
+            &:hover
+                cursor: pointer
+
+        #content
+            background-color: #7889c3
+            box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2)
+            margin-top: 70px
+
+            .contentBtns
+                border-style: none
+                padding: 10px
+                margin: 5px
+
+                &:hover
+                    cursor: pointer
+                    background-color: #a1add8
+
+    #countdown
+        margin-left: 20px
+    
+@media screen and (max-width: 540px)
+    body
+        margin: 5px
+        
+        #time
+            font-size: 55px
+
+        #controls
+
+            .btns
+                width: 80px
+                margin: 10px 10px 0 20px
+                font-size: 20px
+
+    #timeinspection
+        position: relative
+        display: inline-block
+
+    #content
+        display: none
+        position: absolute
+        min-width: 160px
+        padding: 12px 16px
+        z-index: 1
+
+    &:hover #content
+        display: inline
