Removed time inspection temporarily

--- a/css/main.sass
+++ b/css/main.sass
@@ -3,7 +3,7 @@
 body
     margin: 0
     font-family: "Open Sans"
-    background-color: #000
+    background-color: #ABCFDB
 
     #time
         text-align: center
@@ -70,17 +70,3 @@ body
                 width: 80px
                 margin: 10px 10px 0 20px
                 font-size: 20px
-
-    #timeinspection
-        position: relative
-        display: inline-block
-
-    #content
-        display: none
-        position: absolute
-        min-width: 160px
-        padding: 12px 16px
-        z-index: 1
-
-    &:hover #content
-        display: inline
